style: remove scrollbar, fix padding

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,12 @@ body {
   color: #000;
   padding: 0;
   margin: 0;
+  scrollbar-width: none;
+  overflow: -moz-scrollbars-none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 @layer utilities {
